# timescale_fastapi

./: .gitignore  High-Level.txt  README.md  database.txt  hello.py  pyproject.toml
src/: feed_data.py  kafka_consumer.py  kafka_producer.py  main.py
src/database/: postgres.py
src/models/: product_models.py
src/routes/: product_routes.py
